parser/other/forge.output
Useless nonterminals

   constraintlist


Terminals which are not used

   IDEN
   INT


Useless rules

   19 constraintlist: /* empty */
   20               | /* empty */


State 0 conflicts: 1 shift/reduce
State 8 conflicts: 1 shift/reduce


Grammar

    0 $accept: forgespec $end

    1 forgespec: forgemodule
    2          | evalmodule

    3 evalmodule: evaldecllist

    4 evaldecllist: evaldecl
    5             | evaldecllist evaldecl
    6             | /* empty */

    7 evaldecl: EVAL

    8 forgemodule: langdecl importlist

    9 langdecl: HASH LANG langname

   10 langname: FORGE
   11         | FROGLET
   12         | TEMPORAL

   13 importlist: importdecl
   14           | importlist importdecl
   15           | /* empty */

   16 importdecl: OPEN FILEPATH asoptional

   17 asoptional: AS
   18           | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
IDEN (258)
INT (259)
LANG (260) 9
FORGE (261) 10
FROGLET (262) 11
TEMPORAL (263) 12
EVAL (264) 7
HASH (265) 9
OPEN (266) 16
FILEPATH (267) 16
AS (268) 17


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
forgespec (15)
    on left: 1 2, on right: 0
evalmodule (16)
    on left: 3, on right: 2
evaldecllist (17)
    on left: 4 5 6, on right: 3 5
evaldecl (18)
    on left: 7, on right: 4 5
forgemodule (19)
    on left: 8, on right: 1
langdecl (20)
    on left: 9, on right: 8
langname (21)
    on left: 10 11 12, on right: 9
importlist (22)
    on left: 13 14 15, on right: 8 14
importdecl (23)
    on left: 16, on right: 13 14
asoptional (24)
    on left: 17 18, on right: 16


state 0

    0 $accept: . forgespec $end

    EVAL  shift, and go to state 1
    HASH  shift, and go to state 2

    EVAL      [reduce using rule 6 (evaldecllist)]
    $default  reduce using rule 6 (evaldecllist)

    forgespec     go to state 3
    evalmodule    go to state 4
    evaldecllist  go to state 5
    evaldecl      go to state 6
    forgemodule   go to state 7
    langdecl      go to state 8


state 1

    7 evaldecl: EVAL .

    $default  reduce using rule 7 (evaldecl)


state 2

    9 langdecl: HASH . LANG langname

    LANG  shift, and go to state 9


state 3

    0 $accept: forgespec . $end

    $end  shift, and go to state 10


state 4

    2 forgespec: evalmodule .

    $default  reduce using rule 2 (forgespec)


state 5

    3 evalmodule: evaldecllist .
    5 evaldecllist: evaldecllist . evaldecl

    EVAL  shift, and go to state 1

    $default  reduce using rule 3 (evalmodule)

    evaldecl  go to state 11


state 6

    4 evaldecllist: evaldecl .

    $default  reduce using rule 4 (evaldecllist)


state 7

    1 forgespec: forgemodule .

    $default  reduce using rule 1 (forgespec)


state 8

    8 forgemodule: langdecl . importlist

    OPEN  shift, and go to state 12

    OPEN      [reduce using rule 15 (importlist)]
    $default  reduce using rule 15 (importlist)

    importlist  go to state 13
    importdecl  go to state 14


state 9

    9 langdecl: HASH LANG . langname

    FORGE     shift, and go to state 15
    FROGLET   shift, and go to state 16
    TEMPORAL  shift, and go to state 17

    langname  go to state 18


state 10

    0 $accept: forgespec $end .

    $default  accept


state 11

    5 evaldecllist: evaldecllist evaldecl .

    $default  reduce using rule 5 (evaldecllist)


state 12

   16 importdecl: OPEN . FILEPATH asoptional

    FILEPATH  shift, and go to state 19


state 13

    8 forgemodule: langdecl importlist .
   14 importlist: importlist . importdecl

    OPEN  shift, and go to state 12

    $default  reduce using rule 8 (forgemodule)

    importdecl  go to state 20


state 14

   13 importlist: importdecl .

    $default  reduce using rule 13 (importlist)


state 15

   10 langname: FORGE .

    $default  reduce using rule 10 (langname)


state 16

   11 langname: FROGLET .

    $default  reduce using rule 11 (langname)


state 17

   12 langname: TEMPORAL .

    $default  reduce using rule 12 (langname)


state 18

    9 langdecl: HASH LANG langname .

    $default  reduce using rule 9 (langdecl)


state 19

   16 importdecl: OPEN FILEPATH . asoptional

    AS  shift, and go to state 21

    $default  reduce using rule 18 (asoptional)

    asoptional  go to state 22


state 20

   14 importlist: importlist importdecl .

    $default  reduce using rule 14 (importlist)


state 21

   17 asoptional: AS .

    $default  reduce using rule 17 (asoptional)


state 22

   16 importdecl: OPEN FILEPATH asoptional .

    $default  reduce using rule 16 (importdecl)
